# RPGStatSystem

./: .gitignore  CMakeLists.txt  README.md
RPGStatSystem/: .gitignore  CMakeLists.txt
RPGStatSystem/Sources/: main.cpp
RPGStatSystem/Sources/Collection/: RPGDefaultCollection.hpp  RPGStatCollection.hpp
RPGStatSystem/Sources/Event/: Delegate.hpp  EventHandler.cpp
RPGStatSystem/Sources/Interface/: IStatLinkable.hpp  IStatModifiable.hpp  IStatScalable.hpp
RPGStatSystem/Sources/Linker/: RPGRatioLinker.hpp
RPGStatSystem/Sources/Modifier/: RPGStatModifier.cpp  RPGStatModifier.hpp
RPGStatSystem/Sources/Stat/Modifiable/: RPGStatModifiable.cpp  RPGStatModifiable.hpp
RPGStatSystem/Sources/Stat/Vital/: RPGVital.hpp
RPGStatSystem/src/: main.cpp
RPGStatSystem/src/RPGStatSystem/: IStatModifiable.cpp  IStatModifiable.hpp  RPGStat.hpp  RPGStatCollection.cpp  RPGStatCollection.hpp  RPGStatModifiable.cpp  RPGStatModifiable.hpp  RPGStatModifier.hpp
RPGStatSystem/src/RPGStatSystem/Attribute/: RPGAttribute.cpp  RPGAttribute.hpp
RPGStatSystem/src/RPGStatSystem/Collection/: RPGStatCollection.cpp
RPGStatSystem/src/RPGStatSystem/Collection/Collections/: RPGDefaultCollection.cpp  RPGDefaultCollection.hpp
RPGStatSystem/src/RPGStatSystem/Collections/: RPGDefaultCollection.cpp  RPGDefaultCollection.hpp
RPGStatSystem/src/RPGStatSystem/Event/: Delegate.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp
RPGStatSystem/src/RPGStatSystem/Interface/: IStatCurrentValueEvent.hpp  IStatLinkable.hpp  IStatModifiable.hpp  IStatScalable.hpp  IStatValueEvent.hpp
RPGStatSystem/src/RPGStatSystem/Linker/: RPGStatLinker.cpp  RPGStatLinker.hpp
RPGStatSystem/src/RPGStatSystem/Linker/Linkers/: RPGRatioLinker.cpp  RPGRatioLinker.hpp
RPGStatSystem/src/RPGStatSystem/Modifier/: RPGStatModifiable.cpp  RPGStatModifiable.hpp
RPGStatSystem/src/RPGStatSystem/Stat/: RPGStat.cpp  RPGStat.hpp
RPGStatSystem/src/RPGStatSystem/Vital/: RPGVital.cpp  RPGVital.hpp
Sources/: main.cpp
Sources/Collection/: RPGDefaultCollection.cpp  RPGDefaultCollection.hpp  RPGStatCollection.cpp  RPGStatCollection.hpp
Sources/Event/: EventHandler.hpp
Sources/Interface/: IStatCurrentValueChange.hpp  IStatCurrentValueEvent.hpp  IStatModifiable.hpp  IStatValueChange.hpp  IStatValueEvent.hpp
Sources/Linker/: RPGRatioLinker.cpp  RPGStatLinker.cpp  RPGStatLinker.hpp
Sources/Modifier/: RPGStatModifier.cpp  RPGStatModifier.hpp
Sources/Modifier/Mods/: RPGStatModBaseAdd.cpp  RPGStatModBaseAdd.hpp  RPGStatModBasePercent.cpp  RPGStatModBasePercent.hpp  RPGStatModTotalAdd.cpp  RPGStatModTotalAdd.hpp  RPGStatModTotalPercent.cpp  RPGStatModTotalPercent.hpp
Sources/Stat/: RPGStat.cpp  RPGStat.hpp
Sources/Stat/Attribute/: RPGAttribute.cpp  RPGAttribute.hpp
Sources/Stat/Modifiable/: RPGStatModifiable.cpp  RPGStatModifiable.hpp
Sources/Stat/Vital/: RPGVital.cpp  RPGVital.hpp
Sources/System/: Broadcaster.hpp  optimized_inserter.h
Sources/System/Event/: Delegate.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp
